# ai-os

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/apparmor/: bwrap
.github/workflows/: linux-sandbox.yml
benchmarks/: README.md
benchmarks/workloads/: dependency-advisory-review.json  repository-investigation.json  test-failure-diagnosis.json
crates/aios-adapter-process/: Cargo.toml
crates/aios-adapter-process/src/: cgroup.rs  lib.rs  rootfs.rs
crates/aios-adapter-process/tests/: linux_bubblewrap.rs
crates/aios-adapter-tool/: Cargo.toml
crates/aios-adapter-tool/src/: lib.rs
crates/aios-agent/: Cargo.toml
crates/aios-agent/src/: lib.rs
crates/aios-core/: Cargo.toml
crates/aios-core/src/: error.rs  lib.rs  policy.rs  state.rs  task.rs
crates/aios-core/tests/: benchmark_workloads.rs
crates/aios-local-api/: Cargo.toml
crates/aios-local-api/src/: lib.rs
crates/aios-local-api/tests/: protocol_v4_contract.rs
crates/aios-local-api/tests/fixtures/v4/: health-request.json  health-response.json
crates/aios-runtime/: Cargo.toml
crates/aios-runtime/src/: approval.rs  event.rs  execution.rs  lib.rs  supervisor.rs
crates/aios-storage-sqlite/: Cargo.toml
crates/aios-storage-sqlite/src/: lib.rs
docs/: agent-runtime.md  api-compatibility.md  approval-grants.md  architecture.md  capability-model.md  capability-policy.md  definition-of-done.md  local-api.md  mvp-spec.md  process-adapter.md  roadmap.md  threat-model.md  tool-adapter.md  vision.md
docs/adr/: 0001-separate-approval-principal.md  0002-no-shell-tool-execution.md  0003-explicit-network-destinations.md  0004-non-resumable-restart.md  0005-stable-local-api.md  0006-bubblewrap-process-isolation.md  0007-task-scoped-scratch.md  0008-content-addressed-rootfs.md  0009-task-cgroup-v2-resource-boundary.md  README.md
examples/: task.json
