[workspace]
members = [
    "crates/aios-adapter-process",
    "crates/aios-adapter-tool",
    "crates/aios-core",
    "crates/aios-local-api",
    "crates/aios-runtime",
    "crates/aios-storage-sqlite",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/AlvaVinci/ai-os"
rust-version = "1.97.1"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
uuid = { version = "1.0", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
