[package]
name = "aios-adapter-process"
version = "0.1.0"
description = "Bounded child-process Tool handler for AI OS"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aios-adapter-tool = { path = "../aios-adapter-tool" }
aios-runtime = { path = "../aios-runtime" }

[dev-dependencies]
aios-core = { path = "../aios-core" }
