[package]
name = "aios-core"
version = "0.1.0"
description = "Core task and state-machine types for AI OS"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
