[package]
name = "aios-local-api"
version = "0.1.0"
description = "Unix-socket local API and daemon for AI OS"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aios-core = { path = "../aios-core" }
aios-runtime = { path = "../aios-runtime" }
aios-storage-sqlite = { path = "../aios-storage-sqlite" }
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "aiosd"
path = "src/bin/aiosd.rs"

[[bin]]
name = "aiosctl"
path = "src/bin/aiosctl.rs"
